add optional author field
